# nucleus-cli

./: CMakeLists.txt  LICENSE  README.md
.github/: README.md
src/: main.cpp
src/cmd/install/: install.cpp  install.hpp
src/cmd/ipc/: ipc.cpp  ipc.hpp
src/cmd/theme/: theme.cpp  theme.hpp
src/cmd/update/: update.cpp  update.hpp
src/include/funcs/: spinner.hpp
src/include/prompts/: prompts.hpp
